infrastructure/base/clud-server.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: clud-server
spec:
  selector:
    matchLabels:
      app: clud-server
  template:
    metadata:
      name: clud-server
      labels:
        app: clud-server
    spec:
      containers:
      - image: localhost:5000/clud-server
        name: clud-server
      serviceAccountName: clud-service-account
---

kind: Service
apiVersion: v1
metadata:
  name: clud-server
spec:
  selector:
    app: clud-server
  ports:
    - protocol: TCP
      port: 80
      name: web
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clud-server
  annotations:
    ingress.kubernetes.io/protocol: h2c
spec:
  rules:
  - host: clud.clud.local
    http:
      paths:
      - path: /
        backend:
          serviceName: clud-server
          servicePort: web
